--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,8 +6,7 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "emit": true
+    "strict": true
   },
   "include": [
     "vite.config.ts"
